[package]
name = "voxelengine"
version = "0.1.0"
edition = "2021"

[dependencies]
ash = { version = "0.38.0+1.3.281", features = ["linked", "debug", "std"]}
ash-window = "0.13.0"
winit = { version = "0.29", features = ["rwh_06"] }
vk-mem = "0.4.0"
imgui = "0.12.0"
imgui-winit-support = "0.12.0"
memoffset = "0.9.1"
ultraviolet = "0.9.0"
env_logger = "0.11.3"
log = "0.4.21"
image = "0.25.1"
libnoise = "1.1.2"

voxelengine-proc = { path = "../voxelengine-proc" }
voxelengine-gui = { path = "../voxelengine-gui" }
lazy_static = "1.5.0"
