[package]
name = "voxelengine-proc"
version = "0.1.0"
edition = "2021"

[dependencies]
imgui = "0.12.0"
imgui-winit-support = "0.12.0"
memoffset = "0.9.1"
ultraviolet = "0.9.0"
env_logger = "0.11.3"
log = "0.4.21"
quote = "1.0"
syn = "1.0"
proc-macro2 = "1.0"
deluxe = "0.5.0"

[lib]
proc-macro = true

